laid out entire footer section, finishing up the project

--- a/index.html
+++ b/index.html
@@ -127,35 +127,35 @@
       <img class="pens" src="../photoshopLayers/pen-box.png" alt="">
       <img src="../photoshopLayers/blackbox.png" alt="">
     </div>
-  <div>
-    <div class="details">
-      <h1>Honor</h1>
-      <h1>the details</h1>
-      <p>For the global service design network</p>
-      <img class="number-two" src="../photoshopLayers/number2.png" alt="">
-      <img class="two-pencils" src="../photoshopLayers/pencils2.png" alt="">
+    <div>
+      <div class="details">
+        <h1>Honor</h1>
+        <h1>the details</h1>
+        <p>For the global service design network</p>
+        <img class="number-two" src="../photoshopLayers/number2.png" alt="">
+        <img class="two-pencils" src="../photoshopLayers/pencils2.png" alt="">
 
-      <img class="prev-next" src="../photoshopLayers/03Frame.png" alt="">
-    </div>
+        <img class="prev-next" src="../photoshopLayers/03Frame.png" alt="">
+      </div>
       <div class="bloc">
         <h1>What we do</h1>
         <p>Although BLOC occupies a rebel position within their</p>
         <p>market of operations, their rebel nature was insufficiently</p>
         <p>manifest in their existing online presence.</p>
       </div>
-    <div class="campaign-photography">
-      <div class="campaign-creative">
-        <p>campaign creative</p>
-        <p>copy writing</p>
-        <p>product design</p>
-      </div>
+      <div class="campaign-photography">
+        <div class="campaign-creative">
+          <p>campaign creative</p>
+          <p>copy writing</p>
+          <p>product design</p>
+        </div>
 
-      <div class="photography">
-        <p>photography</p>
-        <p>3d/vfx/post</p>
-        <p>digital outdoor</p>
+        <div class="photography">
+          <p>photography</p>
+          <p>3d/vfx/post</p>
+          <p>digital outdoor</p>
+        </div>
       </div>
-    </div>
     </div>
 
   </section>
@@ -172,13 +172,16 @@
 
     <div class="stars">
 
-      <div class="left area">
+      <div class="left area white">
         <div>
           <img src="../photoshopLayers/greg.png" alt="">
           <img src="../photoshopLayers/left-stars.png" alt="">
         </div>
 
-        <p>"Thanks so much for the awesome customer service. So many companies, large and small, have a lot to learn from you. Great job!"</p>
+        <p>"Thanks so much for the awesome</p>
+        <p>customer service. So many companies,</p>
+        <p>large and small, have a lot to learn from</p>
+        <p>you. Great job!"</p>
         <h4>Gregory Bradley</h6>
           <p class="grey">New York - USA</p>
       </div>
@@ -189,18 +192,23 @@
           <img src="../photoshopLayers/center-stars.png" alt="">
         </div>
 
-        <p>"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+        <p>"A great agency who are not only</p>
+        <p>flexible, efficient and professional but a</p>
+        <p>group of people who really care about</p>
+        <p>delivering results for you."</p>
         <h4>Jonathan Kraus</h4>
         <p class="jon">Berlin - Germany</p>
       </div>
 
-      <div class="right area">
+      <div class="right area white">
         <div>
           <img src="../photoshopLayers/caroline.png" alt="">
           <img src="../photoshopLayers/right-stars.png" alt="">
         </div>
 
-        <p>"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+        <p>"The quality of product and more</p>
+        <p>importantly, customer service provided</p>
+        <p>means we keep coming back for more!"</p>
         <h4>Caroline De Smet</h4>
         <p class="grey">Brussels - Belgium</p>
       </div>
@@ -209,8 +217,51 @@
 
   <footer class="footer">
     <div>
-      <h3 class="gotham">Unity</h3>
-      <p>0800 456 789</p>
+      <div class="phone-number">
+        <img class="tinyphone" src="../photoshopLayers/tinyphone.png" alt="">
+        <p>Call now: 0800 456 789</p>
+      </div>
+      <h3 class="unity-foot">Unity</h3>
+      <div class="mail">
+        <img class="tinymail" src="../photoshopLayers/mail.png" alt="">
+        <p>Mail:</p>
+        <p class="purple-mail">info@unity.com</p>
+      </div>
+    </div>
+    <div class="about-us">
+      <h4>About us</h4>
+      <img class="research" src="../photoshopLayers/research.png" alt="">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p>Lectus in gravida interdum, justo quam posuere </p>
+      <p>tincidunt nibh nunc ut tellus. Aliquam ut dui eu tellus </p>
+      <p>maximus. Maecenas venenatis, augue vitae.</p>
+      <img class="social-media" src="../photoshopLayers/social-media.png" alt="">
+    </div>
+    <div class="newsletter">
+      <h4>Newsletter</h4>
+      <p>Signup for our weekly newsletter</p>
+      <p>and get the latest updates</p>
+    <div class="subscribe">
+      <input type="text" class="email" placeholder="Enter your email">
+      <button type="button" class="button">Subscribe</button>
+    </div>
+    </div>
+    <div class="blog">
+    <div class="need">
+      <h4>From blog</h4>
+      <img class="books" src="../photoshopLayers/books.png" alt="">
+      <h5>->Needed a redesign of their site</h5>
+      <p class="purple-words">Dec 25th 2011</p>
+    </div>
+    <div class="dudely">
+      <img class="dude" src="../photoshopLayers/dude-walking.png" alt="">
+      <h5>->Maximize conversions and let</h5>
+      <p>Dec 25th 2011</p>
+    </div>
+    <div class="tall-building">
+      <img class="skyscraper" src="../photoshopLayers/skyscraper.png" alt="">
+      <h5>->Art's for India's mission is underprivileged</h5>
+      <p>Dec 25th 2011</p>
     </div>
   </footer>
 </body>
