changed class names to (hopefully) be more descriptive and readable, organized css according to specificity (please tell me if I organized that correctly!) removed some <p> tags to put in some <br> tags.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
 
     <header>
-      <h3 class="firstnav">Unity</h3>
-      <nav class="firstnav">
+      <h3>Unity</h3>
+      <nav>
         <ul class="list-one">
           <li><a href="javascript:void(0);">Home</a></li>
           <li class="aboutus"><a href="javascript:void(0);">About Us</a></li>
@@ -60,71 +60,62 @@
 
   </section>
 
-  <section class="purpley">
+  <section class="purple-back">
     <div class="invite-text">
-      <h1>Invites</h1>
-      <h1>active attention</h1>
+      <h1>Invites</br>active attention</h1>
       <h4>That's why we invent, and build digital campaigns</h4>
     </div>
 
     <img class="brush-box" src="../photoshopLayers/brush-box.png" alt="">
 
-    <div class="stretch">
+    <div class="complex-text">
       <h2>Complexity should be secret</h2>
-      <p>We know you have a story to tell. You want the world to embrace your</p>
-      <p>incredible ideas, products, and services. Trouble is, you're not sure about the</p>
-      <p>best way to get your message across. No problem. We do.</p>
+      <p>We know you have a story to tell. You want the world to embrace your<br>incredible ideas, products, and services. Trouble is, you're not sure about the<br>best way to get your message across. No problem. We do.</p>
     </div>
 
     <div class="align">
 
-      <div class="lefty column">
-        <img class="icon1" src="../photoshopLayers/handmade.png" alt="">
+      <div class="column">
+        <img class="tinity" src="../photoshopLayers/handmade.png" alt="">
         <h4>Handmade Layouts</h4>
         <img class="underline" src="../photoshopLayers/underline.png" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur fermentum</p>
-        <p>adipiscing elit. Nulla sagittis diam nisl,</p>
-        <p> varius nisl fringilla sit amet</p>
+        <p>Lorem ipsum dolor sit amet, consectetur fermentum<br>adipiscing elit. Nulla sagittis diam nisl,<br>varius nisl fringilla sit amet</p>
       </div>
 
-      <div class="middle column">
-        <img class="icon2" src="../photoshopLayers/creative.png" alt="">
+      <div class="column">
+        <img class="grad-cap" src="../photoshopLayers/creative.png" alt="">
         <h4>Creative Designs</h4>
         <img class="underline" src="../photoshopLayers/underline.png" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <p>Integer egestas purus tortor, eu bibendum leo viverra quis.</p>
-        <p>Sed at metus nec sem molestie cursus quis a velit.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>Integer egestas purus tortor, eu bibendum leo viverra quis.<br>Sed at metus nec sem molestie cursus quis a velit.</p>
       </div>
 
-      <div class="righty column">
-        <img class="icon3" src="../photoshopLayers/support.png" alt="">
+      <div class="column">
+        <img class="tools" src="../photoshopLayers/support.png" alt="">
         <h4>100% Support</h4>
         <img class="underline" src="../photoshopLayers/underline.png" alt="">
-        <p>Curabitur quis sapien justo. Aenean nec ante vitae metus</p>
-        <p>tristique gravida ut a erat. Aenean tempus egestas urna, eu</p>
-        <p>feugiat est interdum in.</p>
+        <p>Curabitur quis sapien justo. Aenean nec ante vitae metus<br>tristique gravida ut a erat. Aenean tempus egestas urna, eu<br>feugiat est interdum in.</p>
       </div>
     </div>
 
-    <div class="lines">
-      <img class="line1" src="../photoshopLayers/orangeline.png" alt="">
-      <img class="line2" src="../photoshopLayers/dash.png" alt="">
+    <div class="line-dash">
+      <img class="orange-line" src="../photoshopLayers/orangeline.png" alt="">
+      <img class="white-dash" src="../photoshopLayers/dash.png" alt="">
     </div>
   </section>
 
   <section class="city">
 
-    <div class="pride">
+    <div class="clients">
       <h1>We love our clients</h1>
       <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
     </div>
-    <img class="play" src="../photoshopLayers/roundbutton.png" alt="">
+    <img class="triangle" src="../photoshopLayers/roundbutton.png" alt="">
   </section>
 
   <section class="what-we-do">
 
     <div class="pencils">
-      <img class="pens" src="../photoshopLayers/pen-box.png" alt="">
+      <img class="pen-box" src="../photoshopLayers/pen-box.png" alt="">
       <img src="../photoshopLayers/blackbox.png" alt="">
     </div>
     <div>
@@ -139,21 +130,15 @@
       </div>
       <div class="bloc">
         <h1>What we do</h1>
-        <p>Although BLOC occupies a rebel position within their</p>
-        <p>market of operations, their rebel nature was insufficiently</p>
-        <p>manifest in their existing online presence.</p>
+        <p>Although BLOC occupies a rebel position within their<br>market of operations, their rebel nature was insufficiently<br>manifest in their existing online presence.</p>
       </div>
       <div class="campaign-photography">
         <div class="campaign-creative">
-          <p>campaign creative</p>
-          <p>copy writing</p>
-          <p>product design</p>
+          <p>campaign creative<br>copy writing<br>product design</p>
         </div>
 
         <div class="photography">
-          <p>photography</p>
-          <p>3d/vfx/post</p>
-          <p>digital outdoor</p>
+          <p>photography<br>3d/vfx/post<br>digital outdoor</p>
         </div>
       </div>
     </div>
@@ -162,17 +147,17 @@
 
   <section class="winter">
 
-    <div class="fif">
+    <div class="global">
       <h1>Global company with a local feel.</h1>
       <h2>We help forward-thinking clients succeed in digital culture</h2>
       <h2>with work that invites active attention</h2>
-      <img class="black-line" src="../photoshopLayers/blackline.png" alt="">
+      <img class="vertical-line" src="../photoshopLayers/blackline.png" alt="">
       <p>What our customers are saying</p>
     </div>
 
-    <div class="stars">
+    <div class="reviews">
 
-      <div class="left area white">
+      <div class="headshots">
         <div>
           <img src="../photoshopLayers/greg.png" alt="">
           <img src="../photoshopLayers/left-stars.png" alt="">
@@ -183,10 +168,10 @@
         <p>large and small, have a lot to learn from</p>
         <p>you. Great job!"</p>
         <h4>Gregory Bradley</h6>
-          <p class="grey">New York - USA</p>
+        <p class="usa-belgium">New York - USA</p>
       </div>
 
-      <div class="center area">
+      <div class="even headshots">
         <div>
           <img src="../photoshopLayers/jonathan.png" alt="">
           <img src="../photoshopLayers/center-stars.png" alt="">
@@ -200,7 +185,7 @@
         <p class="jon">Berlin - Germany</p>
       </div>
 
-      <div class="right area white">
+      <div class="headshots">
         <div>
           <img src="../photoshopLayers/caroline.png" alt="">
           <img src="../photoshopLayers/right-stars.png" alt="">
@@ -210,12 +195,12 @@
         <p>importantly, customer service provided</p>
         <p>means we keep coming back for more!"</p>
         <h4>Caroline De Smet</h4>
-        <p class="grey">Brussels - Belgium</p>
+        <p class="usa-belgium">Brussels - Belgium</p>
       </div>
     </div>
   </section>
 
-  <footer class="footer">
+  <footer>
     <div>
       <div class="phone-number">
         <img class="tinyphone" src="../photoshopLayers/tinyphone.png" alt="">
@@ -253,8 +238,8 @@
         <h5>->Needed a redesign of their site</h5>
         <p class="purple-words">Dec 25th 2011</p>
       </div>
-      <div class="dudely">
-        <img class="dude" src="../photoshopLayers/dude-walking.png" alt="">
+      <div class="guy">
+        <img class="guy-walking" src="../photoshopLayers/guy-walking.png" alt="">
         <h5>->Maximize conversions and let</h5>
         <p>Dec 25th 2011</p>
       </div>
