--- a/index.html
+++ b/index.html
@@ -1,12 +1,186 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/fontello.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container-fluid home">
+
+    <div class="row">
+      <div class="col-md-3">
+        <img class="logo-white" src="img/logo.png" alt="">
+      </div>
+      <div class="col-md-9">
+        <div class="row">
+          <div class="col-md">
+            <i class="demo-icon icon-mail"></i>
+            <link>info@hellohelp.com</link>
+          </div>
+
+          <div class="col-md">
+            <i class="demo-icon icon-phone"></i>
+            <link>+440 875369208</link>
+          </div>
+
+          <div class="col-md">
+            <div class="btn-group dropright">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                LOG IN
+              </button>
+              <div class="dropdown-menu">
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md">
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  EN
+                </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">English</a>
+                <a class="dropdown-item" href="#">Spanish</a>
+                <a class="dropdown-item" href="#">French</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md">
+            <i class="demo-icon icon-facebook-squared"></i>
+            <i class="demo-icon icon-twitter"></i>
+            <i class="demo-icon icon-instagram"></i>
+            <i class="demo-icon icon-mail-1"></i>
+          </div>
+
+        </div>
+        <div class="row">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Services
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Products
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Contact</a>
+                </li>
+              </ul>
+              <i class="demo-icon icon-search"></i>
+            </div>
+          </nav>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-10">
+      <h2>35% Sale</h2>
+      <h1>You enter summer with refreshing rates</h1>
+      <button type="button" class="btn btn-light">Explore It</button>
+    </div>
+    <div class="col-md-2">
+      <img src="img/weather.png" alt="">
+      <img src="img/gellery.png" alt="">
+      <img src="img/virtual-tour.png" alt="">
+    </div>
+  </div>
+
+
+  <div class="row">
+    <i class="demo-icon icon-hospital"></i>
+    <h4>Hotel</h4>
+
+      <div class="row">
+        <div class="col-md-3">
+          <h5>Arrival</h5>
+          <i class="demo-icon icon-calendar"></i>
+          <input type="text" name="" value=""></input>
+        </div>
+
+        <div class="col-md-3">
+          <h5>Going</h5>
+          <i class="demo-icon icon-calendar"></i>
+          <input type="text" name="" value=""></input>
+        </div>
+
+        <div class="form-group row">
+         <label for="exampleFormControlSelect1">Room</label>
+         <select class="form-control" id="exampleFormControlSelect1">
+           <option>1</option>
+           <option>2</option>
+           <option>3</option>
+           <option>4</option>
+           <option>5</option>
+         </select>
+        </div>
+
+        <div class="form-group row">
+         <label for="exampleFormControlSelect1">Person</label>
+         <select class="form-control" id="exampleFormControlSelect1">
+           <option>1</option>
+           <option>2</option>
+           <option>3</option>
+           <option>4</option>
+           <option>5</option>
+         </select>
+        </div>
+
+        <div class="form-group row">
+         <label for="exampleFormControlSelect1">Child</label>
+         <select class="form-control" id="exampleFormControlSelect1">
+           <option>1</option>
+           <option>2</option>
+           <option>3</option>
+           <option>4</option>
+           <option>5</option>
+         </select>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+</body>
+
 </html>
