--- a/products.html
+++ b/products.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <div class="container-fluid">
+
+    </div>
 
   </body>
 </html>
