just got news/announcements/products section mostly laid out. Starting on the footer

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
 
     </div>
 
+    </div>
+
 
     <div class="row bg-dark">
       <div class="col-md-10 text-light ">
@@ -375,18 +377,104 @@
     </div>
 
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-7 border">
         <h3 class="text-primary">News</h3>
-        <img class="float-right" src="img/half-pacman.png" alt="">
+        <a href="https://www.google.com/search?q=online+pacman+game&oq=online+pacman+game&aqs=chrome..69i57j0l5.4160j1j7&sourceid=chrome&ie=UTF-8#clb=clb">
+          <img class="float-right" src="img/half-pacman.png" alt="">
+        </a>
+        <div class="row">
+          <div class="col">
+            <img src="img/jan29.svg" alt="">
+          </div>
+          <div class="col">
+            <h5>Lorem ipsum dolor sit amet</h5>
+            <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor in varius pharetra</p>
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+              Read More
+            </button>
+          </div>
+          <div class="w-100">
+          </div>
+          <div class="col">
+            <img src="img/feb15.svg" alt="">
+          </div>
+          <div class="col">
+            <h5>Lorem ipsum dolor sit amet</h5>
+            <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor in varius pharetra</p>
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+              Read More
+            </button>
+          </div>
+          <div class="w-100"></div>
+          <div class="col">
+            <img src="img/march2.svg" alt="">
+          </div>
+          <div class="col">
+            <h5>Lorem ipsum dolor sit amet</h5>
+            <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor in varius pharetra</p>
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+              Read More
+            </button>
+          </div>
+        </div>
+        <button type="button" class="btn btn-light w-100">View All</button>
       </div>
-      <div class="col-md-5">
+
+      <div class="col-md-5 border">
         <h3 class="text-success">Announcements</h3>
-        <img class="float-right" src="img/half-pacman.png" alt="">
+        <a href="https://www.google.com/search?q=online+pacman+game&oq=online+pacman+game&aqs=chrome..69i57j0l5.4160j1j7&sourceid=chrome&ie=UTF-8#clb=clb">
+          <img class="float-right" src="img/half-pacman.png" alt="">
+        </a>
+        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor.</h5>
+        <p class="text-secondary">Aenean et enim ullamcorper erat aliquam congue non ut nisi. Ut vel velit cursus, aliquet ex eu, cursus velit. Morbi aliquam.</p>
+        <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+          Read More
+        </button>
+        <hr>
+        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquam, tortor.</h5>
+        <p class="text-secondary">Aenean et enim ullamcorper erat aliquam congue non ut nisi. Ut vel velit cursus, aliquet ex eu, cursus velit. Morbi aliquam.</p>
+        <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle border-bottom" data-toggle="dropdown">
+          Read More
+        </button>
+        <div class="row">
+          <div class="col-md-12 border">
+            <h3 class="text-primary">Products</h3>
+            <p class="text-secondary w-50">Nunc iaculis ornare nisi, eget volutpat tempor quis. Quisque blandit ipsum mi at erat vulputate posuere.</p>
+            <button type="button" class="text-primary btn btn-outline-light dropdown-toggle border-bottom" data-toggle="dropdown">
+              Read More
+            </button>
+          </div>
+        </div>
       </div>
 
     </div>
 
+    <div class="row bg-dark">
+      <div class="col-md-3">
+        <h3 class="text-secondary">NortSea About</h3>
+        <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mi eros, egestas vel tempus vel, mollis ut odio. Praesent et posuere ex. Suspendisse bibendum orci nec imperdiet porttitor. Quisque blandit ipsum at erat vulputate posuere. Morbi id urna ultrices, accumsan tortor vitae, facilisis leo.</p>
+        <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle border-bottom" data-toggle="dropdown">
+          Read More
+        </button>
+      </div>
+      <div class="col-md-3">
+        <h3 class="text-secondary">NortSea Hotel</h3>
+          <a href="#" class="text-secondary">About Us</a>
+          <a href="#" class="text-secondary">Services</a>
+          <a href="#" class="text-secondary">Contact</a>
+      </div>
+      <div class="col-md-3">
+        <h3 class="text-secondary">Contact Us</h3>
+        <div class="row">
 
+
+        </div>
+      </div>
+      <div class="col-md-3">
+        <img src="img/logo-footer.png" alt="">
+      </div>
+
+    </div>
 
 
   </div>
